...
    _searchController.dispose();
    super.dispose();
  }

  String _getFilterLabel() {
    if (_searchText.isNotEmpty) return "Search Results";
    if (_recent) return "Recent";
    if (_runwayLength == 0) return "Nearest";
    return "Nearest ${_runwayLength ~/ 1000}K+ Runway";
  }

  @override
  Widget build(BuildContext context) {
    bool searching = true;
...
                autocorrect: false,

                // 3. Tells the keyboard to hide the predictive text/suggestion strip
                enableSuggestions: false,
                decoration: InputDecoration(
                  border: const OutlineInputBorder(),
                  labelText: "Search",
                  hintText: "Airport, navaid, fix, address...",
                  prefixIcon: const Icon(Icons.search),
                  suffixIcon: _searchText.isNotEmpty
                          ? IconButton(
                          icon: const Icon(Icons.clear),
                          onPressed: () {
...
                          _runwayLength = 2000;
                          _recent = false;
                          _searchController.clear();
                          _searchText = "";
                        });
                      },
                      child: const Text("Nearest 2K"),
                    ),
                    const SizedBox(width: 4),
                    TextButton(
                      style: !_recent && _runwayLength == 4000 && _searchText.isEmpty
                          ? TextButton.styleFrom(backgroundColor: Theme.of(context).colorScheme.primaryContainer)
                          : null,
...
                          _runwayLength = 4000;
                          _recent = false;
                          _searchController.clear();
                          _searchText = "";
                        });
                      },
                      child: const Text("Nearest 4K"),
                    ),
                  ],
                ),
              ),
            ),
          ],
...
