...
  @override
  Widget build(BuildContext context) {

    return Container(padding: const EdgeInsets.all(0),
      child: Column(children: [
        Container(
            padding: const EdgeInsets.fromLTRB(10, 0, 10, 0), child: const Text("Create", style: TextStyle(fontWeight: FontWeight.w800),),),
        const Padding(padding: EdgeInsets.all(10)),
        Visibility(visible: _getting, child: const CircularProgressIndicator(),),
        const Padding(padding: EdgeInsets.all(10)),
        Container(padding: const EdgeInsets.fromLTRB(20, 0, 20, 0),
          child:Row(children:[
            Flexible(
              flex: 6,
              child: TextFormField(
                onChanged: (value)  {
                  _route = value;
                },
                initialValue: _route.trim(),
                decoration: const InputDecoration(border: UnderlineInputBorder(), labelText: 'Route',)
              )
            ),
            Flexible(
                flex: 1,
                child: Tooltip(showDuration: const Duration(seconds: 30), triggerMode: TooltipTriggerMode.tap, message: "Create As Entered: Enter all the waypoints separated by spaces in the Route box.\nCreate IFR Preferred Route/Show IFR ATC Routes: Enter the departure and the destination separated by a space in the Route box.\n\nUsing 1800wxbrief.com account \"${Storage().settings.getEmail()}\".
            ),
            Flexible(
              flex: 1,
              child:PopupMenuButton(
                tooltip: "",
                itemBuilder: (BuildContext context)  => <PopupMenuEntry<String>>[
...
